# FetchReleaseInfo

./: CMakeLists.txt  README.md
src/: cloud_image_info_provider.cpp  cloud_image_info_provider.hpp  command_parser.cpp  command_parser.hpp  curl_request.cpp  curl_request.hpp  main.cpp  release_info_provider.hpp
